--- a/styles.css
+++ b/styles.css
@@ -198,6 +198,7 @@ body {
   display: flex;
   gap: 10px; /* Espacio entre los mensajes */
   flex-direction: column;
+  border-radius: 0%, 30%, 30%,30%;
 }
 
 .message {
@@ -207,6 +208,7 @@ body {
   margin: 6px 0;
   position: relative;
   word-wrap: break-word; /* Permitir que el texto se ajuste */
+  
 }
 
 
@@ -217,6 +219,7 @@ body {
   min-width: 20%;
   max-width: 70%;
   align-self: flex-end;
+  border-radius: 15px 0px 15px 15px;
 
 
 }
@@ -227,6 +230,7 @@ body {
   min-width: 20%;
   max-width: 70%;
   align-self: flex-start;
+  border-radius: 0px 15px 15px 15px;
 }
 
 .message-input {
